# voice_factory_backend

./: .gitignore  Dockerfile  README.md  gradium_tts.py  gradium_tts_streaming.py  main.py  main_fastapi.py  pyannote_stt.py  pyproject.toml  requirements.txt  result.csv  test_query.m4a  text2sql.py  text2sql_duckdb_runner.py
data/: Machine_Data.csv  Sensor_Data.csv  Telemetry_Data.csv  Test_Telemetry_Data.csv
prompts/: output2answer_prompt.txt  text2sql_prompt.txt
